--- a/styles/base/_header.scss
+++ b/styles/base/_header.scss
@@ -18,8 +18,6 @@ header {
         align-items: flex-start;
         display: block;
 
-        padding: $spacing-default;
-
         height: 100%;
     }
 
